--- a/OtoTamir.WEBUI/Views/Shared/Components/_ListVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_ListVehicleViewComponentPartial/Default.cshtml
@@ -1,55 +1,71 @@
 ﻿@model List<Vehicle>
 
+<div class="card shadow-sm">
+    <div class="card-header bg-primary text-white py-2">
+        <h6 class="mb-0 small">Araç Listesi</h6>
+    </div>
+    <div class="card-body p-0">
+        <div class="table-responsive">
+            <table class="table table-sm table-striped mb-0">
+                <thead class="table-light">
+                    <tr>
+                        <th>Plaka</th>
+                        <th>Marka</th>
+                        <th>Model</th>
+                        <th>Yıl</th>
+                        <th>İşlemler</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @if (Model.Any())
+                    {
+                        @foreach (var vehicle in Model)
+                        {
+                            <tr>
+                                <td>@vehicle.Plate</td>
+                                <td>@vehicle.Brand</td>
+                                <td>@vehicle.Model</td>
+                                <td>@vehicle.Year</td>
+                                <td>
+                                    <div class="btn-group btn-group-sm" role="group">
+                                        <a class="btn btn-outline-secondary" data-bs-toggle="collapse" href="#collapse-history-@vehicle.Id">
+                                            Geçmiş
+                                        </a>
+                                        <a class="btn btn-outline-success" data-bs-toggle="collapse" href="#collapse-new-@vehicle.Id">
+                                            Yeni İşlem
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="collapse" id="collapse-history-@vehicle.Id">
+                                <td colspan="5" class="p-0 border-0">
+                                    <div class="card shadow-sm m-1">
+                                        <div class="card-header bg-info text-white py-2">
+                                            <h6 class="mb-0 small">İşlem Geçmişi - @vehicle.Plate</h6>
+                                        </div>
+                                        <div class="card-body p-3">
+                                            @await Component.InvokeAsync("_ListServiceRecordbyVehicleIdViewComponentPartial", vehicle.Id)
+                                        </div>
+                                    </div>
+                                </td>
+                            </tr>
+                            <tr class="collapse" id="collapse-new-@vehicle.Id">
+                                <td colspan="5" class="p-0 border-0">                                    
+                                        @await Component.InvokeAsync("_CreateServiceRecordViewComponentPartial", vehicle.Id)                                    
+                                </td>
+                            </tr>
+                        }
+                    }
+                    else
+                    {
+                        <tr>
+                            <td colspan="5" class="text-center text-muted py-3">Kayıtlı araç bulunamadı.</td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
+        </div>
+    </div>
+</div>
 
-
-<table class="table table-bordered mt-3">
-    <thead>
-        <tr>
-            <th>Plaka</th>
-            <th>Marka</th>
-            <th>Model</th>
-            <th>Yıl</th>
-            <th>İşlemler</th>
-        </tr>
-    </thead>
-    <tbody>
-        @foreach (var vehicle in Model)
-        {
-            <tr>
-                <td>@vehicle.Plate</td>
-                <td>@vehicle.Brand</td>
-                <td>@vehicle.Model</td>
-                <td>@vehicle.Year</td>
-                <td>
-                    <div class="btn-group" role="group">
-                        <a class="btn btn-sm btn-warning" data-bs-toggle="collapse" href="#collapse-history-@vehicle.Id">İşlem Geçmişi</a>
-                       
-                        <a class="btn btn-sm btn-success" data-bs-toggle="collapse" href="#collapse-new-@vehicle.Id">Yeni İşlem</a>
-                    </div>
-
-                </td>
-            </tr>
-            <tr class="collapse" id="collapse-history-@vehicle.Id">
-                <td colspan="5">
-                    <div class="bg-light p-3 rounded border">
-                        <h6>İşlem Geçmişi - @vehicle.Plate</h6>
-                        @await Component.InvokeAsync("_ListServiceRecordbyVehicleIdViewComponentPartial", vehicle.Id)
-                    </div>
-                 </td>
-            </tr>
-            <tr>
-                <td colspan="5" class="p-0 border-0">
-                   
-                    <div class="collapse" id="collapse-new-@vehicle.Id">
-                        @await Component.InvokeAsync("_CreateServiceRecordViewComponentPartial", vehicle.Id)
-                    </div>
-                </td>
-            </tr>
-
-        }
-    </tbody>
-</table>
-
-  
-    <script src="~/js/AutoCollapse.js" defer></script>
-
+<script src="~/js/AutoCollapse.js" defer></script>
