--- a/OtoTamir.WEBUI/Views/ServiceRecord/Index.cshtml
+++ b/OtoTamir.WEBUI/Views/ServiceRecord/Index.cshtml
@@ -32,11 +32,24 @@
                     <form method="post" asp-action="GetVehiclesByClientId">
                     <label for="clientSelect" class="form-label">Müşteri Seç</label>
                     <select class="form-select d-inline w-auto me-2" id="clientSelect" name="SelectedClientId">
-                        <option selected disabled>Müşteri Seçiniz</option>
-                        @foreach(var item in Model.Clients)
-                        {
+                       
+                                @if (Model.SelectedClientName!=null)
+                                {
+                                <option selected disabled>
+                                    @Model.SelectedClientName
+                                </option>
+                                    }
+                                    else{
+                                     <option selected disabled>
+                                    Müşteri Seçiniz
+                                </option>
+                                    }
+
+                            
+                            @foreach(var item in Model.Clients)
+                            {
                             <option value="@item.Id">@item.Name</option>
-                        }                      
+                            }                      
                     </select>
                     <button class="btn btn-primary" type="submit">
                         Listele
@@ -59,7 +72,7 @@
         
         @if (Model.SelectedClientId != null && Model.SelectedClientId!=0)
         {
-            @await Component.InvokeAsync("_CardClientViewComponentPartial", Model.SelectedClientId)
+            @await Component.InvokeAsync("_CardClientViewComponentPartial", new { clientId = Model.SelectedClientId, returnUrl="ServiceRecord/Index" })
             @await Component.InvokeAsync("_ListVehicleViewComponentPartial", Model.SelectedClientId)
             <div class="modal fade" id="createVehicleModal-@Model.SelectedClientId" tabindex="-1" aria-labelledby="createVehicleModalLabel" aria-hidden="true">
                 @await Component.InvokeAsync("_CreateVehicleViewComponentPartial", new CreateVehicleDTO { ClientId = (int)Model.SelectedClientId, ReturnUrl = "ServiceRecord/Index" })
@@ -71,7 +84,7 @@
        
     </div>
     <div class="modal fade" id="createClientModal" tabindex="-1" aria-labelledby="createClientModalLabel" aria-hidden="true">
-        @await Component.InvokeAsync("_CreateClientViewComponentPartial","/ServiceRecord/Index")
+        @await Component.InvokeAsync("_CreateClientViewComponentPartial","ServiceRecord/Index")
     </div>
 
 </section>
