--- a/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/_Layout.cshtml
@@ -5,10 +5,10 @@
 <!--begin::Head-->
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-    <title>AdminLTE 4 | Fixed Sidebar</title>
+    <title>OtoTamir</title>
     <!--begin::Primary Meta Tags-->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="title" content="AdminLTE 4 | Fixed Sidebar" />
+    <meta name="title" content="OtoTamir" />
     <meta name="author" content="ColorlibHQ" />
     <meta name="description"
           content="AdminLTE is a Free Bootstrap 5 Admin Dashboard, 30 example pages using Vanilla JS." />
