--- a/OtoTamir.WEBUI/Views/Shared/Components/_EditServiceRecordViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_EditServiceRecordViewComponentPartial/Default.cshtml
@@ -52,7 +52,7 @@
 
                 <!-- Yeni log ekleme formu (HER semptom için ayrı) -->
                 <div class="mt-4 border-top pt-3">
-                    <form asp-action="AddSymptomLog" method="post">
+                    <form asp-action="AddServiceWorkflowLogs" method="post">
                         <input type="hidden" name="SymptomId" value="@symptom.Id" />
 
                         <div class="mb-2">
