--- a/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
+++ b/OtoTamir.WEBUI/Views/Shared/Components/_CreateVehicleViewComponentPartial/Default.cshtml
@@ -2,7 +2,7 @@
 
 <div class="modal-dialog modal-lg">
     <div class="modal-content shadow-sm">
-        <form asp-controller="Home" asp-action="CreateVehicle" method="post">
+        <form asp-controller="Vehicle" asp-action="CreateVehicle" method="post">
             <div class="modal-header bg-primary text-white">
                 <h5 class="modal-title mb-0">Yeni Araç Ekle</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Kapat"></button>
