--- a/OtoTamir.WEBUI/Views/Account/Profile.cshtml
+++ b/OtoTamir.WEBUI/Views/Account/Profile.cshtml
@@ -31,8 +31,8 @@
             <div class="col-md-6">
                 <div class="mb-3">
                     <label class="form-label">Kullanıcı Adı</label>
-                    <input class="form-control" value="@Model.UserName" readonly />
-                    <input type="hidden" asp-for="UserName" />
+                    <input asp-for="UserName" class="form-control" value="@Model.UserName" readonly />
+                  
                 </div>
 
                 <div class="mb-3">
@@ -70,7 +70,7 @@
 
                 <div class="mb-3">
                     <label  class="form-label">Profil Resmi</label>
-                    
+
                     
                     <input type="file" class="form-control" name="file">
                 </div>
