--- a/OtoTamir.WEBUI/Views/ServiceRecord/Index.cshtml
+++ b/OtoTamir.WEBUI/Views/ServiceRecord/Index.cshtml
@@ -66,7 +66,7 @@
       
         @if (Model.SelectedClientId != null && Model.SelectedClientId!=0)
         {
-            @await Component.InvokeAsync("_CardClientViewComponentPartial", new { clientId = Model.SelectedClientId, returnUrl="ServiceRecord/Index" })
+            @await Component.InvokeAsync("_CardClientViewComponentPartial", new { clientId = Model.SelectedClientId, returnUrl = "ServiceRecord/GetClientDetails" })
             @await Component.InvokeAsync("_ListVehicleViewComponentPartial", Model.SelectedClientId)
             <div class="modal fade" id="createVehicleModal-@Model.SelectedClientId" tabindex="-1" aria-labelledby="createVehicleModalLabel" aria-hidden="true">
                 @await Component.InvokeAsync("_CreateVehicleViewComponentPartial", new CreateVehicleDTO { ClientId = (int)Model.SelectedClientId, ReturnUrl = "ServiceRecord/Index" })
